# DiTEC_WDN_dataset

./: 404.html  README.md  index.html  pyproject.toml  search.html  test_gida.py  tut_interface.py
datasets/: index.html
ditec_wdn_dataset/arguments/: test_data_interface_v6_config.yaml  test_data_interface_v7_config.yaml
ditec_wdn_dataset/core/: datasets_large.py
ditec_wdn_dataset/hf/: dataset.py
ditec_wdn_dataset/inputs/public/: 19 Pipe System.inp  EXN.inp  NPCL-1.inp  WA1.inp  ZJ.inp  foss_poly_1.inp  ky10.inp  ky14.inp  ky16.inp  ky18.inp  ky24_v.inp  large.inp  modena.inp  new_york.inp
ditec_wdn_dataset/utils/: auxil_v8.py  configs.py
docs/: index.md  installation.md
hpo/: index.html
installation/: index.html
naive_manual_hpo/: index.html
overview/: index.html
parameters/: index.html
pso/: index.html
quickstart/: index.html
scenegen/: index.html
search/: search_index.json
simconfig_tut/: index.html
