[tool.poetry]
name = "ditec-water-dataset"
version = "1.0.5"
description = ""
authors = ["htruong <truonghuycuong95@gmail.com>", "atello <a.tello@rug.nl>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "ditec_wdn_dataset" },
    { include = "ditec_wdn_dataset/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
