[tool.poetry]
name = "ditec-water-dataset"
version = "1.0.6"
description = ""
authors = ["htruong <truonghuycuong95@gmail.com>", "atello <a.tello@rug.nl>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "ditec_wdn_dataset" },
    { include = "ditec_wdn_dataset/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.10"
zarr  = "^2.16.1"
dask = "^2025.2.0"
wntr = "^1.1.0"
torch_geometric = "^2.5.3"
scipy = "^1.15.2"
numcodecs = "^0.12.1"
typed-argument-parser = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
